# node-winit-wry

./: .gitignore  .npmignore  Cargo.toml  README.md  build.sh  package.json  test.ts  tsconfig.json
binary/: aarch64-apple-darwin  x86_64-apple-darwin
src/: application.rs  event.rs  lib.rs  listen.rs  main.rs  window.rs
test/: index.html  index.ts
ts/: app.ts  index.ts  types.d.ts  types.ts  utils.ts  window.ts
