[package]
name = "node-winit-wry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.2"
serde_json = "1.0.128"
winit = "0.30.5"
wry = { version="0.44.1", features = ["devtools"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1 
panic = 'abort'
